tests/typing/pass/smtlib/v2.6/pushpop/test.expected
File "tests/typing/pass/smtlib/v2.6/pushpop/test.smt2", line 8, character 14-15:
8 | (assert (or a b))
                  ^
Error Unbound identifier: `b`
